CalculadoraParser.py
#Gabriel Barros, Guilherme Ramos, Matheus Romeike
# Generated from Calculadora.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CalculadoraParser ( Parser ):

    grammarFileName = "Calculadora.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'|'", "'/'", "'%'", "'^'", "'\\n'", "'RES'", 
                     "'MEM'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "SYMBOL", "SUM", 
                      "SUBTRACTION", "MULTIPLY", "DIVISION", "INTEGER_DIVISION", 
                      "MODULO", "POTENTIATION", "ENTER", "RES", "MEM", "NUMBER", 
                      "INTEGER", "WS" ]

    RULE_start = 0
    RULE_line = 1
    RULE_expression = 2
    RULE_res = 3
    RULE_mem = 4

    ruleNames =  [ "start", "line", "expression", "res", "mem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    SYMBOL=3
    SUM=4
    SUBTRACTION=5
    MULTIPLY=6
    DIVISION=7
    INTEGER_DIVISION=8
    MODULO=9
    POTENTIATION=10
    ENTER=11
    RES=12
    MEM=13
    NUMBER=14
    INTEGER=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculadoraParser.LineContext)
            else:
                return self.getTypedRuleContext(CalculadoraParser.LineContext,i)


        def ENTER(self, i:int=None):
            if i is None:
                return self.getTokens(CalculadoraParser.ENTER)
            else:
                return self.getToken(CalculadoraParser.ENTER, i)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = CalculadoraParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.line()
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 11
                self.match(CalculadoraParser.ENTER)
                self.state = 12
                self.line()
                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CalculadoraParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CalculadoraParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = CalculadoraParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(CalculadoraParser.NUMBER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculadoraParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CalculadoraParser.ExpressionContext,i)


        def SYMBOL(self):
            return self.getToken(CalculadoraParser.SYMBOL, 0)

        def res(self):
            return self.getTypedRuleContext(CalculadoraParser.ResContext,0)


        def mem(self):
            return self.getTypedRuleContext(CalculadoraParser.MemContext,0)


        def getRuleIndex(self):
            return CalculadoraParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = CalculadoraParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 29
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.match(CalculadoraParser.NUMBER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 21
                self.match(CalculadoraParser.T__0)
                self.state = 22
                self.expression()
                self.state = 23
                self.expression()
                self.state = 24
                self.match(CalculadoraParser.SYMBOL)
                self.state = 25
                self.match(CalculadoraParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.res()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.mem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CalculadoraParser.ExpressionContext,0)


        def RES(self):
            return self.getToken(CalculadoraParser.RES, 0)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_res

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRes" ):
                listener.enterRes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRes" ):
                listener.exitRes(self)




    def res(self):

        localctx = CalculadoraParser.ResContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_res)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(CalculadoraParser.T__0)
            self.state = 32
            self.expression()
            self.state = 33
            self.match(CalculadoraParser.RES)
            self.state = 34
            self.match(CalculadoraParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CalculadoraParser.ExpressionContext,0)


        def MEM(self):
            return self.getToken(CalculadoraParser.MEM, 0)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_mem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMem" ):
                listener.enterMem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMem" ):
                listener.exitMem(self)




    def mem(self):

        localctx = CalculadoraParser.MemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mem)
        try:
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(CalculadoraParser.T__0)
                self.state = 37
                self.expression()
                self.state = 38
                self.match(CalculadoraParser.MEM)
                self.state = 39
                self.match(CalculadoraParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(CalculadoraParser.MEM)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.match(CalculadoraParser.T__0)
                self.state = 43
                self.match(CalculadoraParser.MEM)
                self.state = 44
                self.match(CalculadoraParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





